# cg-exam-24

./: .gitignore  App.cpp  CMakeLists.txt  LICENSE  README.md  SceneGenerator.cpp
headers/: json.hpp
level/: out.json
level/module/: LIGHT-00.txt  ROOM-00.txt
levels/: properties.json
levels/parts/: LIGHT-01.txt  LIGHT-03.txt  ROOM-01.txt  ROOM-02.txt  ROOM-03.txt  ROOM-04.txt
levels/showcase/: ADDON-00.txt  ADDON-01.txt  ADDON-02.txt  LIGHT-00.txt  LIGHT-01.txt  LIGHT-02.txt  ROOM-00.txt  ROOM-01.txt  ROOM-02.txt
levels/tutorial/: ADDON-00.txt  ADDON-01.txt  ADDON-02.txt  LIGHT-00.txt  LIGHT-01.txt  LIGHT-02.txt  ROOM-00.txt  ROOM-01.txt  ROOM-02.txt
models/: scene.json  sceneOG.json
modules/: AppCommon.hpp  Scene.hpp  Starter.hpp  TextMaker.hpp
scenes/: level-01.json  level-02.json
shaders/: Axis.frag  Axis.vert  Background.vert  Background.vert.spv  Emission.frag  Emission.frag.spv  Emission.vert  Emission.vert.spv  Menu.frag  Menu.frag.spv  Menu.vert  Menu.vert.spv  Phong.frag  Phong.frag.spv  Shader.vert  Shader.vert.spv  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv  Toon.frag  Toon.frag.spv  compile.bat  compile.txt
shaders/brdf/: Blinn.frag  Phong.frag  Toon.frag  Toon.frag.spv  ToonFrag.spv  compile.bat
src/: App.cpp  CG.cpp  SceneGenerator.cpp  StartLib.hpp
src/level/: out.json  properties.json
src/modules/: Enums.hpp  Scene.hpp  Starter.hpp
src/shaders/: Toon.frag  Toon.vert  ToonFrag.spv  ToonVert.spv  compile.bat
src/shaders/brdf/: Blinn.frag  BlinnFrag.spv  Phong.frag  Phong.vert  PhongFrag.spv  Toon.frag  ToonFrag.spv
vs/: cg.sln  cg.vcxproj  cg.vcxproj.filters
